# PrimitiveChat

./: CMakeLists.txt  Makefile  README.md
include/: client_network.h  client_outputs.h  global.h  interface.h  parser.h  server_network.h  server_outputs.h
src/client/: client.c  client_network.c  client_outputs.c  interface.c
src/nlp/: app.py  test.cpp
src/server/: parser.c  server.c  server_network.c  server_outputs.c
